--- a/README.Rmd
+++ b/README.Rmd
@@ -19,7 +19,7 @@ knitr::opts_chunk$set(
 library(BiocStyle)
 ```
 
-# excluderanges - genomic ranges of problematic genomic regions
+# excluderanges, genomic ranges of problematic genomic regions
 
 <img id="excluderanges_logo_by_Mike_Love" src="man/figures/logo.png" align="right" width="125"/>
 
