--- a/README.Rmd
+++ b/README.Rmd
@@ -32,7 +32,9 @@ badges: end -->
 
 **New** - Exclusion sets for human [T2T-CHM13](http://bedbase.org/#/bedsplash/6548a002754cc1e882035293541b59a8) 
 and mouse [GRCm39/mm39](http://bedbase.org/#/bedsplash/edc716833d4b5ee75c34a0692fc353d5) 
-genome assemblies are available.
+genome assemblies are available. R code to download
+ 
+<script src="https://gist.github.com/mdozmorov/7f4393f90932fb6bd911c43c20425ca0.js"></script>
  
 **TL;DR** - For human hg38 genome assembly, [Anshul](https://twitter.com/anshulkundaje/status/1263546023151992832?s=20) 
 and we recommend [ENCFF356LFX exclusion list regions](https://www.encodeproject.org/files/ENCFF356LFX/).
@@ -55,7 +57,7 @@ Naming convention: `<genome assembly>.<lab>.<original file name>`, e.g.,
 
 See [make-data.R](inst/scripts/make-data.R) how we created excluderanges objects.
 
-# Install `excluderanges`
+# Install excluderanges
 
 ```{r "install", eval = FALSE}
 if (!requireNamespace("BiocManager", quietly = TRUE)) {
@@ -334,7 +336,7 @@ lcc1 = lol(cc1) # list of lists
 
 ```{r eval=FALSE}
 # Construct output file name
-fileNameOut <- paste0(lol_pull(lcc1, "data[*][*].Name"), ".bed")
+fileNameOut <- paste0(lol_pull(lcc1, "data[*][*].Name"), ".bed.gz")
 # API token for BED data
 token2 <- paste0("http://bedbase.org/api/bed/", bedbase_id, "/file/bed")
 # Download file
@@ -363,7 +365,7 @@ Example of the  `hg38.Lareau.hg38_peaks` object
 # Get hg38.Lareau.hg38_peaks BEDbase ID
 bedbase_id <- "9fa55701a3bd3e7a598d1d2815e3390f"
 # Construct output file name
-fileNameOut <- "hg38.Lareau.hg38_peak.bed"
+fileNameOut <- "hg38.Lareau.hg38_peak.bed.gz"
 # API token for BED data
 token2 <- paste0("http://bedbase.org/api/bed/", bedbase_id, "/file/bed")
 # Download file
